k3s-on-lxd/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  annotations:
#    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
#    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  name: dashboard-ingress-oauth2-proxy
  namespace: kube-system
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        -  dashboard.private.antoniocaccamo.work
      secretName: tls-secret
  rules:
  - host: dashboard.private.antoniocaccamo.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
